--- a/.github/workflows/OpenData_BulidAndDeployWebsite.yml
+++ b/.github/workflows/OpenData_BulidAndDeployWebsite.yml
@@ -13,7 +13,7 @@ jobs:
   build:
     # The type of runner that the job will run on
     name: Bulid and deploy OpenData Website
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    if: ${{ github.event.workflow_run.conclusion == 'success'}} || ${{github.GITHUB_EVENT_NAME == 'workflow_dispatch'}}
     runs-on: ubuntu-latest
     
     # Steps represent a sequence of tasks that will be executed as part of the job
