--- a/.github/workflows/Build_and_deploy_website.yml
+++ b/.github/workflows/Build_and_deploy_website.yml
@@ -1,9 +1,9 @@
-name: Bulild and deploy OpenData website
+name: Build and deploy OpenData-Website
 
 on:
   workflow_dispatch:
   workflow_run:
-    workflows: ["Release new version on Github and Zenodo"]
+    workflows: ["Create release on tag push"]
     types:
       - completed
 
@@ -13,7 +13,7 @@ jobs:
   build:
     # The type of runner that the job will run on
     name: Bulid and deploy OpenData Website
-    if: ${{ github.event.workflow_run.conclusion == 'success'}} || ${{github.GITHUB_EVENT_NAME == 'workflow_dispatch'}}
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
     
     # Steps represent a sequence of tasks that will be executed as part of the job
